Fixed patient location / address UI on mobile.

--- a/components/BookingLocation/BookingLocation.scss
+++ b/components/BookingLocation/BookingLocation.scss
@@ -128,6 +128,7 @@
 
       @media (max-width: $screen-sm-min) {
         flex-flow: row wrap;
+        flex-direction: column;
       }
     }
 
